--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "webpack-dev-server",
-    "build": "webpack"
+    "build ": "webpack"
   },
   "keywords": [],
   "author": "",
@@ -17,6 +17,8 @@
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^4.2.0",
     "html-webpack-plugin": "^4.3.0",
+    "nanoid": "^3.1.12",
+    "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "style-loader": "^1.2.1",
