--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@babel/core": "^7.11.1",
     "@babel/preset-env": "^7.11.0",
+    "axios": "^0.19.2",
     "babel-loader": "8.0.0-beta.0",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^4.2.0",
